# hackathon-crea-pb

./: README.md  app.py  chatbot.py  hackathon.txt  load_chroma.py  pyproject.toml
chroma_db/: chroma.sqlite3
data/: database.md
