[project]
name = "hackathon-crea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chroma>=0.2.0",
    "docling>=2.15.1",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-docling>=0.2.0",
    "langchain-google-genai>=2.1.5",
    "langchain-unstructured>=0.1.6",
    "streamlit>=1.45.1",
    "tqdm>=4.67.1",
    "unstructured>=0.17.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
